<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Nori</string>
  <string name="hello_world">Hello world!</string>

  <!-- Activity titles -->
  <string name="activity_label_help">Help</string>
  <string name="activity_label_settings">Settings</string>
  <string name="activity_label_serviceSettings">Imageboards</string>

  <!-- Errors -->
  <string name="error_connection">Could not connect to server.</string>

  <!-- Action bars -->
  <string name="action_search">Search</string>
  <string name="action_settings">Settings</string>
  <string name="action_help">Help</string>
  <string name="action_download">Download</string>
  <string name="action_share">Share</string>
  <string name="action_viewOnWeb">View on Web</string>
  <string name="action_viewOnPixiv">View on Pixiv</string>
  <string name="action_add_service">Add service</string>

  <!-- Dialogs -->
  <string name="dialog_title_add_service">Add service</string>
  <string name="dialog_title_edit_service">Edit service</string>

  <!-- Forms -->
  <string name="hint_resource_address">Resource address</string>
  <string name="hint_resource_name">Name</string>
  <string name="hint_resource_username">Username</string>
  <string name="hint_resource_passphrase">API Key</string>

  <!-- Content descriptions -->
  <string name="contentDescription_remove_service">Remove service</string>

  <!-- Obscenity ratings -->
  <string name="rating_safe">Safe</string>
  <string name="rating_questionable">Questionable</string>
  <string name="rating_explicit">Explicit</string>

  <!-- Preferences -->
  <string name="preference_category_search">Search</string>

  <string name="preference_safetyRating_title">Safety rating</string>
  <string name="preference_safetyRating_safe">Safe</string>
  <string name="preference_safetyRating_questionable">Questionable</string>
  <string name="preference_safetyRating_explicit">Explicit</string>
  <string name="preference_defaultQuery_title">Default query</string>
  <string name="preference_defaultQuery_default">rating:safe</string>

  <string name="preference_category_imageViewer">Image Viewer</string>
  <string name="preference_keepScreenOn_title">Keep screen on</string>
  <string name="preference_keepScreenOn_summary">Don\'t turn the screen off while viewing images</string>

  <string name="preference_category_services">Services</string>
  <string name="preference_services_title">Manage imageboards</string>
  <string name="preference_services_summary">Add, edit or remove imageboards</string>

  <!-- Default values -->
  <string name="preference_safetyRating_default">safe</string>


</resources>
