<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/preference_category_search">
    <ListPreference
      android:key="search_safety_rating"
      android:title="@string/preference_safetyRating_title"
      android:dialogTitle="@string/preference_safetyRating_title"
      android:entries="@array/preference_safetyRating_entries"
      android:entryValues="@array/preference_safetyRating_values"
      android:defaultValue="@string/preference_safetyRating_default"/>
    <EditTextPreference
      android:key="search_default_query"
      android:title="@string/preference_defaultQuery_title"
      android:dialogTitle="@string/preference_defaultQuery_title"
      android:singleLine="true"
      android:inputType="textNoSuggestions|textFilter"
      android:defaultValue="@string/preference_defaultQuery_default"/>
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/preference_category_imageViewer">
    <CheckBoxPreference
      android:key="imageViewer_keepScreenOn"
      android:title="@string/preference_keepScreenOn_title"
      android:summary="@string/preference_keepScreenOn_summary"
      android:defaultValue="false"/>
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/preference_category_services">
    <Preference
      android:title="@string/preference_services_title"
      android:summary="@string/preference_services_summary">
      <intent
        android:targetPackage="pe.moe.nori"
        android:targetClass="pe.moe.nori.ServiceSettingsActivity"/>
    </Preference>
  </PreferenceCategory>
</PreferenceScreen>